# voxel-blaze

./: .clang-format  .gitignore  .~lock.measurements.ods#  CMakeLists.txt  CMakePresets.json  measurements.ods  meson.build  readme.md  vcpkg.json
include/glad/: glad.h
include/voxel-blaze/: common.hpp  consts.hpp  model.hpp  shader.hpp  voxel.hpp
include/voxel-blaze/graphics/: camera.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  vertex.hpp  window.hpp
include/voxel-blaze/parsers/: vox_parser.hpp
include/voxel-blaze/voxels/: array_voxel_grid.hpp  voxel.hpp  voxel_grid.hpp
include/voxel_blaze/core/: external.hpp  types.hpp
include/voxel_blaze/graphics/: index_buffer.hpp  shader.hpp  utils.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
lib/: glad.c
ray-tracer/: main.cpp  meson.build  tracer.glsl
ray-tracer/include/vrt/: box.hpp  common.hpp  octree.hpp  ray.hpp  renderer.hpp
ray-tracer/source/: box.cpp  main.cpp  octree.cpp  ray.cpp  renderer.cpp
ray-tracer/subprojects/: .gitignore
source/: consts.cpp  main.cpp  model.cpp  shader.cpp  voxel.cpp  window.cpp
source/graphics/: camera.cpp  index_buffer.cpp  model.cpp  renderer.cpp  shader.cpp  utils.cpp  vertex.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
source/parsers/: vox_parser.cpp
source/voxels/: array_voxel_grid.cpp  voxel_grid.cpp
subprojects/: .gitignore
subprojects/fmt-10.2.0/: .meson-subproject-wrap-hash.txt
