cmake_minimum_required(VERSION "3.28")
project("voxel-blaze" VERSION "0.0.1" LANGUAGES "CXX")
set(CMAKE_CXX_STANDARD "17")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Find dependencies.
find_package(fmt CONFIG REQUIRED)
list(APPEND "VOXEL_BLAZE_DEPENDENCIES" "fmt::fmt")
find_package(glfw3 CONFIG REQUIRED)
list(APPEND "VOXEL_BLAZE_DEPENDENCIES" "glfw")
find_package(GLEW REQUIRED)
list(APPEND "VOXEL_BLAZE_DEPENDENCIES" "GLEW::GLEW")

# Find source files.
set(VOXEL_BLAZE_HEADER_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(VOXEL_BLAZE_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/source")
file(GLOB_RECURSE VOXEL_BLAZE_HEADER_FILES "${VOXEL_BLAZE_HEADER_DIRECTORY}/*.hpp")
file(GLOB_RECURSE VOXEL_BLAZE_HEADER_FILES "${VOXEL_BLAZE_SOURCE_DIRECTORY}/*.hpp")
file(GLOB_RECURSE VOXEL_BLAZE_SOURCE_FILES "${VOXEL_BLAZE_SOURCE_DIRECTORY}/*.cpp")

# Define executable.
add_executable("voxel-blaze" "${VOXEL_BLAZE_HEADER_FILES}" "${VOXEL_BLAZE_SOURCE_FILES}" )
target_include_directories("voxel-blaze" PUBLIC "${VOXEL_BLAZE_HEADER_DIRECTORY}")
target_link_libraries("voxel-blaze" PUBLIC "${VOXEL_BLAZE_DEPENDENCIES}")
